	when version does not match.
	* client/common/client.c, common/game.c, common/game.h, common/map.c,
	common/map.h, server/pregame.c: Small protocol change, to avoid
	sending unused data. Added option to send secrets of the map.
	* client/ai/ai.c: Code cleanup to random_name. Randomizer needs to be
	initialized only once.
	* po/POTFILES.in: Added client/ai/ai.c

2005-03-23  Bas Wijnen <shevek@fmf.nl>
	* client/common/client.c, server/gold.c, server/pregame.c: Fixed race
	condition for client after rolling dice.

2005-03-22  Brian Wellington <bwelling@xbill.org>
	* meta-server/gnocatan-meta-server.c: Removed compiler warnings when
	compiling with -pedantic.

2005-03-20  0.8.1.59  Roland Clobus <rclobus@bigfoot.com>
	* common/game.c: The automatic indent did break the sending of
	gameinfo.

2005-03-20  0.8.1.58  Roland Clobus <rclobus@bigfoot.com>
	* ALL: Applied 'make indent'
	
2005-03-20  0.8.1.57  Roland Clobus <rclobus@bigfoot.com>
	* server/gnocatan-server.c: Made random seating order the default.
	* server/gtk/gnocatan-server-gtk.c: Made random order setting
	persistent.
	* Makefile.am: Added 'make indent' target.

2005-03-16  Brian Wellington <bwelling@xbill.org>
	* common/game.c, common/game.h, server/meta.c, server/player.c,
	server/server.c, server/server.h: Move the register-server,
	server-port, and random-order fields from the GameParams object to
	the Game object.
	* client/gtk/resource-table.c (resource_table_new): Removed the use of
	a fixed-size buffer.

2005-03-14  0.8.1.56  Brian Wellington <bwelling@xbill.org>
	* common/gtk/aboutbox.c, common/gtk/aboutbox.h, common/gtk/Makefile.am,
	client/gtk/gui.c, server/gtk/gnocatan-server-gtk.c: Add common code for
	displaying about boxes; make the client and server use it.
	* common/game.c, common/game.h, server/gnocatan-server.c: Add
	params_load_file()/params_write_file() helper functions.
	* common/game.h, server/gnocatan-server.c, server/gnocatan-server.h,